--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 			}
 		],
 		"types": [
+			"./Assets/01.Scripts/Lobby.multiplay/SchemaTypes",
 			"./Library/PackageCache/zepeto.world@1.3.0",
 			"./Library/PackageCache/zepeto.world@1.3.0/typings/InputSystem",
 			"./Library/PackageCache/zepeto.world@1.3.0/typings/PostProcessing/Editor",
